src/objects/WorkLog__c.object
<CustomObject>
    <fields>
        <fullName>ActivityId__c</fullName>
        <label>Activity</label>
        <referenceTo>Activity__c</referenceTo>
        <relationshipLabel>WorkLogs</relationshipLabel>
        <relationshipName>WorkLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WorkDate__c</fullName>
        <label>WorkDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkDuration__c</fullName>
        <label>WorkDuration</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>WorkLog</label>
    <nameField>
        <label>WorkLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WorkLogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>